用户系统（非管理员系统）完成部分功能